@@ -1,4 +1,8 @@
-2009-08-11  Miguel de Dios  <miguel.dedios@artica.es>
+2009-08-14  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* index.php: add another ob_start for html result is with good order.
+	
+2009-08-14  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_html.php: fixes hidden bug in attribute array list,
 	for input text.
